--- a/resources/etherpad/postgres_deployment.yaml
+++ b/resources/etherpad/postgres_deployment.yaml
@@ -65,5 +65,7 @@ spec:
       restartPolicy: Always
       volumes:
       - name: postgresql-data
+         persistentVolumeClaim:
+         claimName: postgresql
         emptyDir:
           medium: ""
